[gd_scene load_steps=12 format=3 uid="uid://ctm1ek88f1c8l"]

[ext_resource type="Script" path="res://wall2.gd" id="1_ottx2"]
[ext_resource type="Texture2D" uid="uid://d1lu5tab5q1j2" path="res://imagenes/kameha.png" id="2_8vl0v"]
[ext_resource type="Script" path="res://ParallaxBackground.gd" id="3_e6eym"]
[ext_resource type="Texture2D" uid="uid://i8ywr671uwyu" path="res://imagenes/db.webp" id="4_7knv8"]
[ext_resource type="Texture2D" uid="uid://svk0h2sdeeif" path="res://imagenes/ESFERA.png" id="5_sppmt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ieddk"]
size = Vector2(0.5, 249)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hg3ct"]
size = Vector2(117.25, 371)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwbyw"]
atlas = ExtResource("2_8vl0v")
region = Rect2(0, 0, 1290, 327)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgit4"]
atlas = ExtResource("2_8vl0v")
region = Rect2(1290, 0, 1290, 327)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd0va"]
atlas = ExtResource("2_8vl0v")
region = Rect2(2580, 0, 1290, 327)

[sub_resource type="SpriteFrames" id="SpriteFrames_531ba"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwbyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgit4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd0va")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Wall2" type="Area2D"]
position = Vector2(1242, 599)
script = ExtResource("1_ottx2")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("3_e6eym")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(484, 423)
scale = Vector2(2.04752, 2.41268)
texture = ExtResource("4_7knv8")

[node name="ScoredArea2" type="Area2D" parent="."]
position = Vector2(-13, -224)

[node name="Esfera" type="Sprite2D" parent="ScoredArea2"]
position = Vector2(15, -5.00001)
scale = Vector2(0.126, 0.12)
texture = ExtResource("5_sppmt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoredArea2"]
position = Vector2(-14.25, -4)
shape = SubResource("RectangleShape2D_ieddk")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2(4, -541)
shape = SubResource("RectangleShape2D_hg3ct")

[node name="Kame" type="AnimatedSprite2D" parent="CollisionShape2D5"]
self_modulate = Color(0.47451, 0.819608, 0, 1)
position = Vector2(2.00006, -43)
rotation = 1.5708
scale = Vector2(0.38769, 0.474364)
sprite_frames = SubResource("SpriteFrames_531ba")
frame_progress = 0.0690552

[node name="CollisionShape2D6" type="CollisionShape2D" parent="."]
position = Vector2(2, 83)
shape = SubResource("RectangleShape2D_hg3ct")

[node name="Kame1" type="AnimatedSprite2D" parent="CollisionShape2D6"]
self_modulate = Color(0.545098, 0.772549, 0, 1)
position = Vector2(4.06456e-05, 46)
rotation = -1.5708
scale = Vector2(0.410503, 0.483249)
sprite_frames = SubResource("SpriteFrames_531ba")
frame_progress = 0.68903

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="ScoredArea2" to="." method="_on_scored_area_body_entered"]
